<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_dialog_background"
        android:theme="@style/Base.Near">

        <View
            android:id="@+id/v_moon"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_margin="@dimen/_70sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_moon_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/moon"
            app:layout_constraintBottom_toTopOf="@id/v_moon"
            app:layout_constraintStart_toEndOf="@id/v_moon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_improvement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/label_permission"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tv_improvement_details"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/iv_moon_top"
            app:layout_constraintVertical_bias="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_improvement_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/barlow_extra_light"
            android:gravity="center"
            android:textColor="@color/gray_8"
            android:text="@string/msg_permission"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_improvement" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_settings"
            style="@style/ButtonSaveStyle"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/label_open_setting"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_ignore"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_improvement_details"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/btn_ignore"
            style="@style/ButtonCancelStyle"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/label_no_thanks"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/btn_go_to_settings" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_moon_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/moon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>