<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.near.presentation.detail.PlaceDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_600sdp"
        android:paddingBottom="@dimen/_350sdp"
        android:theme="@style/Base.Near"
        tools:context="com.near.presentation.detail.PlaceDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_place_detail_header"
            isVisible="@{(!(vm.placeDetail.isLoading()) &amp;&amp; (!vm.placeDetail.failure))}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_margin="@dimen/margin_small"
                android:foregroundTint="@color/primary_darkest"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Near.Headline3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/header_image"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            isVisible="@{(!(vm.placeDetail.isLoading()) &amp;&amp; (!vm.placeDetail.failure))}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_place_detail_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_800">

                <TextView
                    android:id="@+id/header_address_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:gravity="start"
                    android:text="@string/label_address"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.Near.Headline4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/header_address_text"
                    app:layout_constraintStart_toStartOf="@+id/header_address_text"
                    app:layout_constraintTop_toBottomOf="@+id/header_address_text">

                    <TextView
                        android:id="@+id/address_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/retry_button"
            isVisible="@{vm.placeDetail.failure}"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/label_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_textView" />

        <TextView
            android:id="@+id/error_textView"
            isVisible="@{vm.placeDetail.failure}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_normal"
            android:text="@string/msg_error"
            android:textAppearance="@style/TextAppearance.Near.Headline3"
            android:textColor="@android:color/black"
            app:drawableTopCompat="@drawable/ic_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            isVisible="@{vm.placeDetail.isLoading()}"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            style="?android:attr/progressBarStyleSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/_10sdp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>